--- a/src/Components/Styles/spinner.css
+++ b/src/Components/Styles/spinner.css
@@ -32,7 +32,9 @@
 .loadingio-spinner-ripple-e18p738jw8f {
   width: 200px;
   height: 200px;
-  display: inline-block;
+  display: flex;
+  justify-content: center;
+  align-self: center;
   overflow: hidden;
   background: #f1f2f300;
 }
